fixing avatars near footer z-index

--- a/public/stylesheets/rtl/style_rtl.css
+++ b/public/stylesheets/rtl/style_rtl.css
@@ -1021,7 +1021,7 @@ form + .recently-topics{padding-top:18px;}
 }
 
 /* Hall of Fame */
-.hall-of-fame {position: fixed; bottom: 26px; width: 100%; z-index: 999; padding: 0}
+.hall-of-fame {position: fixed; bottom: 26px; width: 100%; padding: 0; z-index: 990}
 .hall-of-fame > .hall-header {width: 196px; height: 31px; margin: 0 auto; text-shadow: 0 1px 0 #ffffff; position: relative}
 
 .hall-of-fame > .hall-header > h4 {position: absolute; margin: 0; background: transparent url('../../images/hall-of-fame-header.png') no-repeat 0 0; text-align: center; height: 31px; width: 191px; top: 1px}
@@ -1054,12 +1054,8 @@ form + .recently-topics{padding-top:18px;}
 .hall-of-fame > .collapsed {height: 15px}
 .hall-of-fame > .collapsed .hall-people {display: none}
 
-/* New Footer Style 
-/ TBD: Change .footer class to footer to apply the new footer style ;
-*/
-
 .container {padding-bottom: 150px}
-footer {position: fixed; bottom: 0; width: 100%; z-index: 999}
+footer {position: fixed; bottom: 0; width: 100%; z-index: 990}
 footer {border-top: 1px #c9cdd0 solid;
 -webkit-box-shadow: inset 0 1px 0 #f6f9fa;
    -moz-box-shadow: inset 0 1px 0 #f6f9fa;
